--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
      %>
     </div>
   <% end %>
-    <% if @reviews.present? %>
+  <% if @reviews.present? %>
     <h3>Reviews</h3>
     <% @reviews.each do |review| %>
       <div class="review">
@@ -34,11 +34,11 @@
     <% end %>
   <% end %>
   <% if @favourite_movies.present? %>
-  <h3>Favorite Movies</h3>
-  <div class="favorite-movies">
-    <% @favourite_movies.each do |movie| %>
-      <%= link_to image_tag(movie.image_file_name), movie %>
-    <% end %>
-  </div>
-<% end %>
+    <h3>Favorite Movies</h3>
+    <div class="favorite-movies">
+      <% @favourite_movies.each do |movie| %>
+        <%= link_to main_image(movie), movie %>
+      <% end %>
+    </div>
+  <% end %>
 </section>
